5.0.9

NEW

FIXED
    - Group frames can now be moved properly to the right of the screen (CF#194)
    - Font sizing issues in chat have been fixed (CF#231, CF#232)

MISCELLANEOUS
    - The minimap clock options have been updated to include time manager (credit Munsio)


5.0.8

NEW
    - Add option to toggle world markers
    - Add Pawn support to Hero window
    - Make the Azerite bar more awesome
    - Add dynamic cam option toggle
    - Add coordinates to minimap

FIXED
    - Restored PvP Arathi HUD
    - Raid frames should display names properly
    - Fix a layout issue with quest items
    - Level rewards window should now display passive skills with correct mask
    - Fade all chat buttons
    - All chat tabs now should have the correct font
    - Minmap buttons now fade when Minimap is hidden (CF#226)
    - Raid frame auras now disappears when no longer present on a player
    - Raid frame auras now correctly aligned
    - All allied races should display the same as base race in hero panel (CF#224)



5.0.7

NEW
    - Changed the default quest BG texture and made it easier to replace this texture
    - Add enrage class power bar for Fury Warriors
    - Talents now show whether you can change them in the toolip just like the default UI

FIXED
    - Made the gold counter on the bag a bit wider for all the goblins out there
    - No more flickering on Azerite compare tooltips! (CF#211)
    - Totem frames (e.g. Black Ox Statue, Earth Elemental, etc.) should now show in the upper-right roughly where buffs used to be until we can build a better solution (CF#93)
    - Voice chat button should now fade properly (CF#213)



5.0.6

NEW
    - Add HUD option to toggle black edge borders (CF#197)

FIXED
    - Un-break auto-quest tracking
    - Only show Hunter Mongoose bar when talented
    - Test for disabled default CompactRaidFrame addon (CF#142)
    - Garrison button should show (when appropriate) on initial load now



5.0.5

NEW