@@ -1,10 +1,12 @@
 5.0.9
 
 NEW
+    - Add background imagery to reputation entries (credit v_riz_table_Kao)
 
 FIXED
     - Group frames can now be moved properly to the right of the screen (CF#194)
     - Font sizing issues in chat have been fixed (CF#231, CF#232)
+    - Fix a scrolling issue and click-to-expand when searching issue in reputation list
 
 MISCELLANEOUS
     - The minimap clock options have been updated to include time manager (credit Munsio)
